--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "ext-gmp": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
-        "devarts/plausible-php": "dev-feature/events-api as 3.x-dev",
+        "devarts/plausible-php": "dev-feature/events-debugging as 3.x-dev",
         "doctrine/dbal": "^4",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
