--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,6 +10,11 @@ framework:
     #esi: true
     #fragments: true
 
+    trusted_proxies: 'private_ranges'
+    trusted_headers:
+        - 'x-forwarded-for'
+        - 'forwarded'
+
 when@test:
     framework:
         test: true
