feat: add analytics service for Umami

--- a/.env
+++ b/.env
@@ -40,4 +40,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-PLAUSIBLE_API_TOKEN='Enter your Plausible.io API token here'
+PLAUSIBLE_API_TOKEN='Your Plausible.io API token'
+UMAMI_API_TOKEN='Your Umami API token'
+UMAMI_WEBSITE_ID_BEN_RAMSEY_DEV='Website ID 1'
+UMAMI_WEBSITE_ID_BRAM_SE='Website ID 2'
