--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,6 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 PLAUSIBLE_API_TOKEN='not_a_real_api_token'
+UMAMI_API_TOKEN='not_a_real_api_token'
+UMAMI_WEBSITE_ID_BEN_RAMSEY_DEV='019075f7-9606-7733-851f-95a99dccdc8c'
+UMAMI_WEBSITE_ID_BRAM_SE='019075f7-c408-787f-b2c1-3b70b1879982'
