--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,11 +10,13 @@ framework:
     #esi: true
     #fragments: true
 
-when@test:
+when@test: &framework_test
     framework:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+when@test_no_db: *framework_test
 
 when@dev:
     framework:
