feat: refactor analytics collection and collect to application database

--- a/.env
+++ b/.env
@@ -40,6 +40,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
+ANALYTICS_SECRET_KEY='This key is used to hash analytics data, such as IP address. Change this.'
+MAXMIND_LICENSE_KEY='Enter your MaxMind license key'
 PLAUSIBLE_API_TOKEN='Your Plausible.io API token'
 UMAMI_API_TOKEN='Your Umami API token'
 UMAMI_WEBSITE_ID_BEN_RAMSEY_DEV='Website ID 1'
