--- a/.env.test
+++ b/.env.test
@@ -4,6 +4,8 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+ANALYTICS_SECRET_KEY='not_a_real_secret_key'
+MAXMIND_LICENSE_KEY='not_a_real_maxmind_license_key'
 PLAUSIBLE_API_TOKEN='not_a_real_api_token'
 UMAMI_API_TOKEN='not_a_real_api_token'
 UMAMI_WEBSITE_ID_BEN_RAMSEY_DEV='019075f7-9606-7733-851f-95a99dccdc8c'
