--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "easycorp/easyadmin-bundle": "^4.10",
+        "gpslab/geoip2": "^2.1",
         "laminas/laminas-diactoros": "^3.3",
+        "matomo/device-detector": "^6.3",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "psr/http-factory": "^1.1",
@@ -173,7 +175,8 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "importmap:install": "symfony-cmd"
+            "importmap:install": "symfony-cmd",
+            "geoip2:update": "symfony-cmd"
         },
         "build:assets:watch": [
             "Composer\\Config::disableProcessTimeout",
