--- a/.env
+++ b/.env
@@ -41,6 +41,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/mailer ###
 
 ANALYTICS_SECRET_KEY='This key is used to hash analytics data, such as IP address. Change this.'
+BETTER_STACK_SOURCE_TOKEN='Enter your Better Stack source token'
 MAXMIND_LICENSE_KEY='Enter your MaxMind license key'
 PLAUSIBLE_API_TOKEN='Your Plausible.io API token'
 UMAMI_API_TOKEN='Your Umami API token'
