--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,18 @@
         "easycorp/easyadmin-bundle": "^4.10",
         "gpslab/geoip2": "^2.1",
         "laminas/laminas-diactoros": "^3.3",
+        "logtail/monolog-logtail": "^3.2",
         "matomo/device-detector": "^6.3",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
+        "psr/clock": "^1.0",
         "psr/http-factory": "^1.1",
         "psr/http-message": "^2.0",
         "ramsey/uuid-doctrine": "^2.1",
         "scienta/doctrine-json-functions": "^6.1",
         "symfony/asset": "~7.1.0",
         "symfony/asset-mapper": "~7.1.0",
+        "symfony/clock": "~7.1.0",
         "symfony/console": "~7.1.0",
         "symfony/doctrine-messenger": "~7.1.0",
         "symfony/dotenv": "~7.1.0",
