fix: exclude 404s/405s, limit to info, and embed URL in message

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -57,6 +57,7 @@ services:
     Logtail\Monolog\LogtailHandler:
         arguments:
             - '%app.service.better_stack.source_token%'
+            - 'info'
     Psr\Clock\ClockInterface $monotonicClock: '@Symfony\Component\Clock\MonotonicClock'
     Psr\Clock\ClockInterface: '@Symfony\Component\Clock\NativeClock'
     Psr\Http\Message\UriFactoryInterface: '@Laminas\Diactoros\UriFactory'
