--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -44,6 +44,7 @@ when@prod:
                 type: fingers_crossed
                 action_level: info
                 handler: logtail
+                excluded_http_codes: [404, 405]
                 buffer_size: 250
             logtail:
                 type: service
