--- a/apache_app.conf
+++ b/apache_app.conf
@@ -1,4 +1,5 @@
 ProxyPassMatch "^//?(wp\-.*)$" "http://pandoras-pot:8080/$1"
-ProxyPassMatch "^/(.*\.[Pp][Hh][Pp][34578]?)$" "http://pandoras-pot:8080/$1"
 ProxyPassMatch "^/(\.git.*)$" "http://pandoras-pot:8080/$1"
 ProxyPassMatch "^/(\.env.*)$" "http://pandoras-pot:8080/$1"
+ProxyPassMatch "^/index\.php$" "!"
+ProxyPassMatch "^/(.*\.[Pp][Hh][Pp][34578]?)$" "http://pandoras-pot:8080/$1"
