feat: send pain to bots requesting wlwmanifest.xml

--- a/apache_app.conf
+++ b/apache_app.conf
@@ -3,3 +3,4 @@ ProxyPassMatch "^/(\.git.*)$" "http://pandoras-pot:8080/$1"
 ProxyPassMatch "^/(\.env.*)$" "http://pandoras-pot:8080/$1"
 ProxyPassMatch "^/index\.php$" "!"
 ProxyPassMatch "^/(.*\.[Pp][Hh][Pp][34578]?)$" "http://pandoras-pot:8080/$1"
+ProxyPassMatch "^/(.*wlwmanifest\.xml)$" "http://pandoras-pot:8080/$1"
