--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -46,6 +46,7 @@ when@prod:
                 handler: logtail
                 excluded_http_codes: [404, 405]
                 buffer_size: 250
+                channels: ["!request"]
             logtail:
                 type: service
                 id: 'Logtail\Monolog\LogtailHandler'
