feat: stop collecting analytics in production
Now that I'm writing logs to Better Stack, and I'm able to create
databoards there using log data, analytics systems like Plausible no
longer seem necessary, and there's no need to write all this database to
my database on each request.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,7 +42,7 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Service\Analytics\AnalyticsService: '@App\Service\Analytics\MultiProvider'
+    App\Service\Analytics\AnalyticsService: '@App\Service\Analytics\NoOpProvider'
     App\Service\Analytics\MultiProvider:
         arguments:
             - '@App\Service\Analytics\AnalyticsDetailsFactory'
