--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -48,7 +48,7 @@ when@prod:
                 handler: logtail
                 excluded_http_codes: [404, 405]
                 buffer_size: 250
-                channels: ["!request"]
+                channels: ["!request", "!app_health"]
             logtail:
                 type: service
                 id: 'Logtail\Monolog\LogtailHandler'
