feat: send .ashx requests to pandora's pot

--- a/apache_app.conf
+++ b/apache_app.conf
@@ -4,3 +4,4 @@ ProxyPassMatch "^/(\.env.*)$" "http://pandoras-pot:8080/$1"
 ProxyPassMatch "^/index\.php$" "!"
 ProxyPassMatch "^/(.*\.[Pp][Hh][Pp][34578]?)$" "http://pandoras-pot:8080/$1"
 ProxyPassMatch "^/(.*wlwmanifest\.xml)$" "http://pandoras-pot:8080/$1"
+ProxyPassMatch "^/(.*\.ashx)$" "http://pandoras-pot:8080/$1"
