--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "symfony/doctrine-messenger": "~7.1.0",
         "symfony/dotenv": "~7.1.0",
         "symfony/expression-language": "~7.1.0",
+        "symfony/filesystem": "~7.1.0",
         "symfony/flex": "^2",
         "symfony/form": "~7.1.0",
         "symfony/framework-bundle": "~7.1.0",
@@ -73,7 +74,8 @@
         "symfonycasts/sass-bundle": "^0.7.0",
         "tuupola/base62": "^2.1",
         "twig/extra-bundle": "^3.0",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "webuni/front-matter": "^2.0"
     },
     "require-dev": {
         "captainhook/captainhook": "^5.23",
