--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,8 @@
         "laminas/laminas-diactoros": "^3.3",
         "logtail/monolog-logtail": "^3.2",
         "matomo/device-detector": "^6.3",
+        "php-extended/php-email-address-interface": "^7.0",
+        "php-extended/php-email-address-object": "^7.0",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "psr/clock": "^1.0",
