--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,7 @@ parameters:
     app.service.analytics.secret_key: '%env(resolve:ANALYTICS_SECRET_KEY)%'
     app.service.better_stack.source_token: '%env(resolve:BETTER_STACK_SOURCE_TOKEN)%'
     app.service.league.common_mark.config:
-        html_input: 'escape'
+        html_input: 'allow'
         max_nesting_level: 50
         autolink:
             allowed_protocols: ['https', 'http']
@@ -51,6 +51,7 @@ services:
 
     App\Service\Analytics\AnalyticsService: '@App\Service\Analytics\NoOpProvider'
     App\Service\Blog\PostBodyConverter $markdownToHtmlConverter: '@App\Service\Blog\MarkdownToHtmlConverter'
+    App\Service\Blog\PostBodyConverter $postBodyToHtmlConverter: '@App\Service\Blog\PostBodyToHtmlConverter'
     Devarts\PlausiblePHP\PlausibleAPI:
         arguments:
             - '%app.service.plausible.api_token%'
@@ -106,6 +107,8 @@ when@test: &services_test
         App\Tests\DataFixtures\:
             resource: '../tests/DataFixtures'
         
+        App\Twig\Extension:
+            public: true
         App\Service\Analytics\AnalyticsService: '@App\Service\Analytics\NoOpProvider'
         GeoIp2\ProviderInterface: '@App\Service\GeoIp2\NoOpProvider'
 
