--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
         "symfony/twig-bundle": "~7.1.0",
         "symfony/ux-turbo": "^2.17",
         "symfony/validator": "~7.1.0",
+        "symfony/var-dumper": "~7.1.0",
         "symfony/web-link": "~7.1.0",
         "symfony/yaml": "~7.1.0",
         "symfonycasts/sass-bundle": "^0.7.0",
