--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -33,7 +33,7 @@ jobs:
       - name: "Install PHP"
         uses: "shivammathur/setup-php@2.31.1"
         with:
-          php-version: "latest"
+          php-version: "8.3"
           coverage: "none"
 
       - name: "Install dependencies (Composer)"
@@ -56,7 +56,7 @@ jobs:
       - name: "Install PHP"
         uses: "shivammathur/setup-php@2.31.1"
         with:
-          php-version: "latest"
+          php-version: "8.3"
           coverage: "none"
           ini-values: "memory_limit=-1"
 
@@ -95,7 +95,7 @@ jobs:
       - name: "Install PHP"
         uses: "shivammathur/setup-php@2.31.1"
         with:
-          php-version: "latest"
+          php-version: "8.3"
           coverage: "xdebug"
           ini-values: "memory_limit=-1"
 
