--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "homepage": "https://ben.ramsey.dev",
     "require": {
-        "php": "^8.3",
+        "php": "~8.3.0",
         "ext-ctype": "*",
         "ext-gmp": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
-        "devarts/plausible-php": "dev-feature/events-debugging as 3.x-dev",
+        "devarts/plausible-php": "^3.3",
         "doctrine/dbal": "^4",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
@@ -123,12 +123,6 @@
     "conflict": {
         "symfony/symfony": "*"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/ramsey/plausible-php"
-        }
-    ],
     "minimum-stability": "stable",
     "prefer-stable": true,
     "autoload": {
@@ -181,7 +175,7 @@
         "analyze": [
             "@analyze:phpstan"
         ],
-        "analyze:phpstan": "phpstan analyze --ansi -v",
+        "analyze:phpstan": "phpstan analyze --ansi -v --memory-limit=1G",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
