--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "doctrine/persistence": "^4.0",
         "easycorp/easyadmin-bundle": "^4.10",
         "gpslab/geoip2": "^2.1",
         "laminas/laminas-diactoros": "^3.3",
